# hackerrank-orchestrate-june26

./: .checkpoint.json  .dockerignore  .gitignore  Dockerfile  README.md  evaluation_report.md  output.csv  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
code/: .env.example  .gitignore  README.md  benchmark.py  config.py  main.py  pyproject.toml  requirements.txt
code/evaluation/: Dockerfile  main.py  metrics.py  report_template.md
code/pipeline/: evidence_filter.py  image_forensics.py  llm_router.py  loader.py  postprocessor.py  preprocessor.py  safety_gate.py  validator.py  vision_analyzer.py
code/prompts/: json_schema.txt  system_vision.txt
code/tests/: test_image_utils.py  test_integration.py  test_llm_router.py  test_logger.py  test_pipeline.py  test_rate_limiter.py  test_safety_gate.py
code/tests/fixtures/: generate_fixtures.py
code/utils/: cache.py  checkpoint.py  image_utils.py  logger.py  rate_limiter.py  token_tracker.py
demo/: run_demo.py
