[project]
name = "orchestrate-evidence-review"
version = "1.0.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["code/tests"]
