[project]
name = "orchestrate-evidence-review"
version = "1.0.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
no_implicit_optional = true
exclude = [
    "code/tests/",
    "node_modules/",
    ".cache/",
    ".tmp/",
    ".work/",
]

[tool.pytest.ini_options]
testpaths = ["code/tests"]
